# 7guis

./: .gitignore  README.md  serve-local.sh
.github/workflows/: deploy.yml
cpp/: .gitignore
cpp/wxwidgets/counter/: App.cpp  App.h  CMakeLists.txt  MainFrame.cpp  MainFrame.h
elm/: .gitignore  index.html  template.html
elm/cells/src/: Main.elm
elm/circle_drawer/src/: Main.elm
elm/counter/src/: Main.elm
elm/counter2/: README.md  elm.json  package-lock.json
elm/counter2/src/: Main.elm  index.js
elm/crud/: db.json  index2.html  main.css
elm/crud/src/: Main.elm
elm/flight_booker/: README.md  elm.json
elm/flight_booker/src/: Main.elm
elm/flight_booker/tests/: MainTest.elm
elm/temp_converter/: README.md  elm.json
elm/temp_converter/src/: Main.elm
elm/timer/src/: Main.elm
gleam/: index.html
gleam/lustre/: .gitignore  .tool-versions  README.md  gleam.toml  manifest.toml  package.json
gleam/lustre/assets/: client.css  docs.html  index.html
gleam/lustre/lustre_time_travel/: gleam.toml  manifest.toml
gleam/lustre/src/: lustre_timer.gleam  timer.gleam  timer_ffi.js
gleam/lustre/test/: lustre_timer_test.gleam
haskell/hyperbole/: cabal.project  devReloadPage.js  hyper7gui.cabal  reload.js
haskell/hyperbole/app/counter/: Main.hs
haskell/hyperbole/app/tempConverter/: Main.hs
haskell/hyperbole/app/todo/: Main.hs
haskell/hyperbole/app/todomvc/: Main.hs
haskell/hyperbole/assets/css/: temp-converter.css
haskell/hyperbole/lib/dev-reload/: DevReload.hs  devReloadPage.js
haskell/miso/: .gitignore  README.md  app.cabal  cabal.project  cabal.project.ghcjs  cabal.project.wasm  fourmolu.yaml  temp-converter.css
haskell/miso/app/counter/: Main.hs
haskell/miso/app/hello/: Main.hs
haskell/miso/app/temp-converter/: Main.hs
haskell/miso/counter/: CounterMain.hs  Main.hs  README.md  app.cabal  main.css
haskell/miso/counter/lib/: Css.hs
haskell/miso/lib/: Css.hs
haskell/miso/manage/: build_all  build_ghc  build_ghcjs  build_ghcjs.once  build_wasm
haskell/miso/manage/wasm/: build_wasm.after
java/JavaFX/Counter/: .gitignore  build.gradle  pom.xml  settings.gradle
java/Swing/counter/: pom.xml
landing/: index.html
manage/: pre-commit.sh
ocaml/jsoo_fmlib_browser/counter/: .ocamlformat
ocaml/jsoo_fmlib_browser/public/: index.html
ocaml/jsoo_fmlib_browser/src/: dune
ocaml/jsoo_fmlib_browser/temp_converter/: Procfile.dev
ocaml/jsoo_react/src/: dune  main.ml
ocaml/jsoo_react_brr/src/: dune  main.ml
ocaml/jsoo_react_tyxml/src/: dune  main.ml
ocaml/jsoo_vdom/counter/: README.md
ocaml/jsoo_vdom/public/: js
purescript/circle_drawer/: package.json  spago.dhall
purescript/circle_drawer/dev/: index.css
purescript/circle_drawer/prod/: index.css  index.js
purescript/circle_drawer/src/: Main.purs  MouseExtra.js  MouseExtra.purs
purescript/concur/: .gitignore
purescript/concur/counter/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  spago.yaml
purescript/concur/temp_converter/: .gitignore  index.html  package-lock.json  package.json  spago.yaml
purescript/counter/prod/: index.html  index.js
purescript/counter/src/: Main.purs
purescript/crud/: spago.dhall
purescript/crud/dev/: index.css  index.html
purescript/crud/prod/: index.js
purescript/crud/src/: Main.purs
purescript/deku/counter/: index.html  package.json
purescript/deku/temp_converter/: .gitignore  index.html  package-lock.json  spago.yaml
purescript/flame/: 7guis-theme.css  FLAME_DEVTOOLS_PATCH.md  README.md  docs.html  index.html
purescript/flame/timer/: .gitignore  app.js  devtools.js  index.html  package.json  spago.yaml  vite.config.mjs
purescript/flight_booker/dev/: index.html
purescript/flight_booker/prod/: index.js
purescript/flight_booker/src/: DateParser.purs  Main.purs
purescript/flight_booker/test/: Main.purs
purescript/halogen/: build-prod-all  index.html
purescript/halogen/circle_drawer/: package-lock.json  package.json  spago.dhall
purescript/halogen/counter/: .gitignore  package-lock.json  package.json
purescript/halogen/crud/: package-lock.json  package.json
purescript/halogen/flight_booker/: package-lock.json  package.json  spago.dhall
purescript/halogen/temp_converter/: README.md  package-lock.json  package.json
purescript/halogen/timer/: README.md  package-lock.json  spago.dhall
purescript/temp_converter/: package.json  spago.dhall
purescript/temp_converter/prod/: index.js
purescript/temp_converter/src/: Main.purs  TempConverter.purs
purescript/timer/: spago.dhall
purescript/timer/prod/: index.js
purescript/timer/src/: Main.purs
python/gtk3/counter/: main.py  requirements.txt
python/wxwidgets/counter/: main.py  main_frame.py
racket/: counter.rkt
rescript-7guis/: .gitignore  README.md  index.html  package-lock.json  package.json  rescript.json  vite.config.js
rescript-7guis/manage/: pre-commit.sh
rescript-7guis/src/: App.res  Effect.res  Effect.resi  EffectDebug.res  Main.res  ReactDebug.res  ReactDebug.resi  TimeTravelDebugger.res  TimeTravelDebugger.resi  index.css  timeTravelDebugger.css
rescript-7guis/src/01_counter/: Counter.res  counter.css
rescript-7guis/src/02_temperatureConverter/: TemperatureConverter.res  TemperatureConverter.resi  temperatureConverter.css
rescript-7guis/src/03_flightBooker/: FlightBooker.res  flightBooker.css
rescript-7guis/src/04_timer/: Timer.res
rescript-7guis/src/04_timer2/: Timer2.res  Timer2.resi  timer2.css
rescript-7guis/src/05_crud/: Crud.res  crud.css
rescript-7guis/src/06_circleDrawer/: CircleDrawer.res  circleDrawer.css
rescript-7guis/src/07_cells/: Cells.res
rescript-7guis/src/cells/: Cells.res
rescript-7guis/src/circleDrawer/: CircleDrawer.res
rescript-7guis/test/: EffectDebugTest.res  EffectTest.res
rescript/counter/: README.md  bsconfig.json
rescript/temp_converter/: index.html
shared/: 7guis-theme.css  styleguide.html
typescript/react/: index.html  package-lock.json  package.json
(+146 files in other folders)
