cabal-version:      3.0
name:               hyper7gui
version:            0.1.0.0
license:            NONE
build-type:         Simple

common shared
    ghc-options: -Wall
    default-language: GHC2021

    build-depends: base
                 , dev-reload
                 , text
                 , bytestring
                 , hyperbole
                 , aeson
                 , web-view
                 , wai-middleware-static
                 , effectful
                 , string-interpolate
                 , string-conversions
                 , containers

    default-extensions:
      OverloadedStrings
      OverloadedRecordDot
      DuplicateRecordFields
      DataKinds
      DeriveAnyClass
      TypeFamilies
      LambdaCase
      QuasiQuotes
      DerivingStrategies
      UndecidableInstances
      TemplateHaskell


library dev-reload
    ghc-options: -Wall
    build-depends: base
                 , text
                 , file-embed
    hs-source-dirs: lib/dev-reload
    exposed-modules: DevReload

executable todomvc
    import:           shared
    hs-source-dirs:   app/todomvc
    main-is:          Main.hs


executable counter
    import:           shared
    hs-source-dirs:   app/counter
    main-is:          Main.hs


executable tempConverter
    import:           shared
    hs-source-dirs:   app/tempConverter
    main-is:          Main.hs