cabal-version: 2.2
name: app
version: 0.1.0.0
synopsis: Sample miso app
category: Web

common wasm
  if arch(wasm32)
    ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      "-optl-Wl,--export=hs_start"
    cpp-options:
      -DWASM

library lib
  hs-source-dirs:
    lib
  exposed-modules:
    Css
  build-depends: base
               , text
               , miso
               , file-embed
               , template-haskell
               , filepath
  default-language: Haskell2010
  default-extensions:
    ImportQualifiedPost

executable counter
  import: wasm
  hs-source-dirs: app/counter
  main-is: Main.hs
  build-depends: base
               , lib
               , miso
               , mtl
  default-language: Haskell2010

executable temp-converter
  import: wasm
  hs-source-dirs: app/temp-converter
  main-is: Main.hs
  build-depends: base
               , lib
               , miso
               , mtl
               , text
               , containers
               , jsaddle
               , time
  default-language: Haskell2010

-- Miso's README project: it should compile on all platforms
executable hello
  import: wasm
  hs-source-dirs: app/hello
  main-is: Main.hs
  build-depends: base
               , miso
  default-language: Haskell2010