cabal-version: 2.2
name: app
version: 0.1.0.0
synopsis: Sample miso app
category: Web

common wasm
  if arch(wasm32)
    ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      "-optl-Wl,--export=hs_start"
    cpp-options:
      -DWASM

library lib
  hs-source-dirs:
    lib
  exposed-modules:
    Css
  build-depends: base
               , text
               , miso
               , template-haskell
  default-language:
    Haskell2010

executable app
  import:
    wasm
  main-is:
    Main.hs
  build-depends: base
               , lib
               , miso
               , mtl
  default-language:
    Haskell2010
